@@ -1,3 +1,9 @@
+2002-08-27  Robin Farine  <robin.farine@acn-group.ch>
+
+	* acinclude.m4 (ECOS_PATH_TCL): having found tclConfig.sh in
+	/<lib>/tcl<ver>, search for tkConfig.sh in /<lib>/tcl<ver> and in
+	/<lib>/tk<ver>.
+
 2002-08-03  Bart Veer  <bartv@ecoscentric.com>
 
 	* Created as part of autoconf reorganization.
